--- a/cheakout.HTML
+++ b/cheakout.HTML
@@ -58,7 +58,7 @@
 
 <body>
 
-    <form id="delivery-form" action="https://formspree.io/f/mqkrvwll" method="POST" onsubmit="showSuccessPopup()">
+    <form id="delivery-form" action="https://formspree.io/f/mayrrwvn" method="POST" onsubmit="showSuccessPopup()">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
 
@@ -75,9 +75,6 @@
     </form>
     <p><a href="index.html">Back to Home Page</a></p>
 
-</body>
-
-</html>
 </body>
 
 </html>
