--- a/review.html
+++ b/review.html
@@ -63,7 +63,7 @@
 
 <body>
 
-    <form id="delivery-form" action="https://formspree.io/f/mqkrvwll" method="POST" onsubmit="showSuccessPopup()">
+    <form id="delivery-form" action="https://formspree.io/f/xleqqrzj" method="POST" onsubmit="showSuccessPopup()">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
 
