--- a/feedback.html
+++ b/feedback.html
@@ -58,7 +58,7 @@
 
 <body>
 
-    <form id="delivery-form" action="https://formspree.io/f/mqkrvwll" method="POST" onsubmit="showSuccessPopup()">
+    <form id="delivery-form" action="https://formspree.io/f/xqkrrzne" method="POST" onsubmit="showSuccessPopup()">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
 
