--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <h1>Register</h1>
       <div class="input-box">
   <form id="delivery-form" action="https://formspree.io/f/xyyrrgow" method="POST" onsubmit="showSuccessPopup()">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
+      <label for="username">username:</label>
+      <input type="text" id="username" name="username" required>
       </div>
 
       <div class="input-box">
